# GoWebApi/router/auth.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/laixhe/gonet/xerror"
 	"github.com/laixhe/gonet/xgin"
 
 	"webapi/app/controllers"
@@ -11,21 +12,22 @@ import (
 // AuthRouter 鉴权相关
 func AuthRouter(r *gin.RouterGroup) {
 	groupRouter := r.Group("auth")
-	c := controllers.NewAuth()
+	cs := controllers.NewAuth()
+
 	// not token
 	{
-		groupRouter.POST("register", c.Register) // 注册
-		groupRouter.POST("login", c.Login)       // 登录
+		groupRouter.POST("register", cs.Register) // 注册
+		groupRouter.POST("login", cs.Login)       // 登录
 	}
 
 	// token auto
-	//jwtAutoRouter := groupRouter.Use(xgin.JwtAuthAuto(core.Config().Jwt, core.ErrorAuthInvalid(nil)))
+	//jwtAutoRouter := groupRouter.Group("", xgin.JwtAuthAuto(core.Config().Jwt, core.ErrorAuthInvalid(nil)))
 	//{
 	//}
 
 	// token
-	jwtRouter := groupRouter.Use(xgin.JwtAuth(core.Config().Jwt, core.ErrorAuthInvalid(nil)))
+	jwtRouter := groupRouter.Group("", xgin.JwtAuth(core.Config().Jwt, &xerror.Error{}))
 	{
-		jwtRouter.POST("refresh", c.Refresh) // 刷新Jwt
+		jwtRouter.POST("refresh", cs.Refresh) // 刷新Jwt
 	}
 }
